<resources>
    <string name="app_name">BetaApp</string>
    <string name="btn_login">Login</string>
    <string name="title_activity_user">User</string>
    <string name="hint_avatar">Avatar</string>
    <string name="login_failed_message">Login failed!</string>

    <string name="user_title">User</string>
    <string name="user_followers">Followers</string>
    <string name="user_following">Following</string>
    <string name="user_starred">Starred</string>
    <string name="user_repositories">Repositories</string>
    <string name="user_loading_error">User data error</string>
    <string name="user_no_repo_error">User has no repositories</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>

    <string name="repo_title">Repository</string>
    <string name="repo_description">Description</string>
    <string name="repo_contributors">Contributors</string>
    <string name="repo_star">Star</string>
    <string name="repo_un_star">Unstar</string>
    <string name="repo_star_error">Staring failed!</string>

    <string name="todo">TODO</string>
</resources>