<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbarContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.BetaApp.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.BetaApp.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/repo_name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/repo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:textSize="16sp"
            tools:text="Some random repo name" />
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/repo_buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/repo_contributors_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:text="@string/repo_contributors"
                android:textSize="16sp" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/repo_star_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/repos_star_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/repo_star"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_star" />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/repo_description_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/repo_description"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/repo_description"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:textSize="16sp"
                tools:text="Some random description, Some random description, Some random description" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>