<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbarContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:theme="@style/Theme.BetaApp.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.BetaApp.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/user_data_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarContainer">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/user_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/user_avatar"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentStart="true"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/hint_avatar"
                    android:src="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/user_avatar"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/user_display_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:ellipsize="marquee"
                        android:fontFamily="sans-serif"
                        android:singleLine="true"
                        android:textSize="30sp"
                        tools:text="Some Random name" />

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:ellipsize="marquee"
                        android:fontFamily="sans-serif-light"
                        android:singleLine="true"
                        android:textSize="16sp"
                        tools:text="Some Random name" />

                </LinearLayout>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/user_followers_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_container"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/user_followers"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/user_followers_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="sans-serif-light"
                    android:textSize="16sp"
                    tools:text="1245" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/user_following_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_followers_container"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/user_following"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/user_following_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="sans-serif-light"
                    android:textSize="16sp"
                    tools:text="1245" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/user_repositories_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_following_container"
            android:layout_margin="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/user_repositories_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/user_repositories"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/user_repositories_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:fontFamily="sans-serif-light"
                        android:textSize="16sp"
                        tools:text="1245" />
                </LinearLayout>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/user_repositories_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/user_repositories_container" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/user_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif-light"
            android:text="@string/user_loading_error"
            android:textSize="30sp" />

    </RelativeLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/user_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone" />

</RelativeLayout>